--- a/css/general.css
+++ b/css/general.css
@@ -56,7 +56,7 @@ p   {
 
 header {
     background-position:center;
-    background-color: black;
+    background-color: white;
     margin:0;
 }
  
@@ -68,7 +68,7 @@ header {
 .nav-top ul {
     margin:0;
     padding:0;
-    background-color: black;
+    background-color: #622B46;
     text-align: center;
     font-family: century gothic, Arial, Sans-Serif;
     font-weight:lighter;
@@ -187,4 +187,10 @@ footer {
     background-color: white;
 }
 
-
+a:link 
+{   color:black;
+    text-decoration: none}
+}      /* unvisited link */
+a:visited {color:grey;}  /* visited link */
+a:hover {color:black;}  /* mouse over link */
+a:active {color:black;}  /* selected link */
